프로젝트 구조 셋팅

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Vending Machine</title>
   </head>
   <body>
-    <div id="root"></div>
+    <header>
+      <h1>Vending Machine</h1>
+    </header>
+    <main id="root"></main>
+    <footer>
+      <p>Copyright 2025 girgir</p>
+    </footer>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
