전체 스타일 작업 적용

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vending Machine</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+    <title>Girgir- Vending Machine</title>
   </head>
   <body>
     <header>
-      <h1>Vending Machine</h1>
+      <h1>Girgir - Frontend Assignment</h1>
     </header>
     <main id="root"></main>
     <footer>
