- 프로젝트 기능 구현 - 코드 리팩토링 및 주석 추가 - 리드미 내용 수정

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Girgir- Vending Machine</title>
+    <title>Girgir- Vending Machine Simulator</title>
   </head>
   <body>
     <header>
-      <h1>Girgir - Frontend Assignment</h1>
+      <h1>Vending Machine Simulator</h1>
     </header>
     <main id="root"></main>
     <footer>
